# telegram-ml-contest

./: ChatGPTDatasetGeneration.ipynb  GithubDatasetAnalysis.ipynb  LICENSE.txt  LearnTokenizer.ipynb  README.md  fast_mm.c  scrapper.py  scrapper2.py  tokenizer-merges.txt  tokenizer-vocab.json  tokenizer.c
data/: README.md  repos.json
notebooks/: DownloadRepos.ipynb  ExtractRepos.ipynb  InferGRU.ipynb  Prepare Other data.ipynb  ScrapPasteBin.ipynb  SearchRepos.ipynb  TrainGRU.ipynb  TrainSVC.ipynb  TransformDataset.ipynb  TransformGRU.ipynb  TransformSVC.ipynb
scripts/: cgru.py  create_dataset_splits.py  ctokenizer.py  gh_dataset.py  languages_list.py  plot_cm.py  plot_data_distribution.py  prepare_data_for_svc.py  test_final_model.py  test_gru.py  train_gru.py  train_svc.py  train_tokenizer.py  transform_gru.py  transform_gru_weights.py  transform_svc.py  transform_tokenizer.py
solution/: CMakeLists.txt  README.md
solution/src/: embed_weights.c  gru.c  gru.h  lang_names.h  main.c  matrix.c  matrix.h  svc.c  svc.h  test.c  tglang.c  tglang.h  tokenizer.c  tokenizer.h
